[gd_scene load_steps=5 format=3 uid="uid://bl0s8eqdofbrl"]

[ext_resource type="Script" path="res://unit.gd" id="1_3bmtm"]
[ext_resource type="Texture2D" uid="uid://b0pku5ghi1opp" path="res://icon.svg" id="1_su5dw"]
[ext_resource type="Script" path="res://MovementTween.gd" id="3_suxkk"]

[sub_resource type="CircleShape2D" id="CircleShape2D_reso1"]
radius = 5.0

[node name="Unit" type="CharacterBody2D"]
collision_mask = 0
script = ExtResource("1_3bmtm")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.2, 0.2)
texture = ExtResource("1_su5dw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_reso1")

[node name="MovementTween" type="Node" parent="."]
script = ExtResource("3_suxkk")
easing = 2

[node name="Timer" type="Timer" parent="."]

[node name="Area2D" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PackedVector2Array(160, 96, 96, 160, -96, 160, -160, 96, -160, -96, -96, -160, 96, -160, 160, -96)

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
